@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 22-10-2005 fixed: aac codec failed for he-aac.
  - 22-10-2005 fixed: fatx limiter is now applied to directory names as well - thanks to soepy.
  - 22-10-2005 added: alac (apple lossless audio codec) support to paplayer. shares dll with the aac codec.
  - 19-10-2005 added: experimental support for multiple paths in my music bookmarks.
